--- a/discord/src/common/emoji/emoji.scss
+++ b/discord/src/common/emoji/emoji.scss
@@ -1,5 +1,6 @@
 .emoji-box{
-  position: relative;
+  position: absolute;
+  transform: translate(-50%, -50%);
   background-color: #2B2D31;
   width: 300px;
   height: 300px;
@@ -8,16 +9,15 @@
   box-shadow: rgba(2, 2, 2, 0.15) 0px 0px 0px 1px;
 }
 
-.default{
-  display: flex;
+.emojiList{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: auto auto;
+  gap: 10px;
 }
-
+.emojiTitle{
+  grid-column:  1/ -1;
+}
 .emoji{
-  width: 48px;
-  height: 48px;
-  .emoji-img{
-    width: 40px;
-    height: 40px;
-    padding: 0px 4px;
-  }
+ width: 100%;
 }
